--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^0.13.1",
     "react-router": "1.0.0-beta2",
     "reactify": "^1.1.0",
+    "reflux": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0",
     "whatwg-fetch": "^0.10.0"
